# mpg123

./: CMakeLists.txt  SVNtoGIT.txt
Android/mpg123player/: settings.gradle
Android/mpg123player/gradle/wrapper/: gradle-wrapper.properties
Android/mpg123player/mpg123/: build.gradle
Android/mpg123player/mpg123/src/androidTest/java/de/mpg123/mpg123/: ExampleInstrumentedTest.java
Android/mpg123player/mpg123/src/main/: AndroidManifest.xml
Android/mpg123player/mpg123/src/main/res/values/: strings.xml
Android/mpg123player/mpg123/src/test/java/de/mpg123/mpg123/: ExampleUnitTest.java
ports/Android/: config.h  config_android_amd64.h  config_android_arm.h  config_android_arm64.h  config_android_x86.h  config_android_x86_noasm.h
